syntax="proto3";
option go_package = ".;proto";

  message Emptymessage {}
  service User{
  rpc GetUserList(PageInfo) returns(UserListResponse); //获取用户列表
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); //根据手机号获取用户信息
  rpc GetUserById(IdRequest) returns (UserInfoResponse);  //根据id获取用户信息
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); //创建用户
  rpc UpdateUser(UpdateUserInfo) returns (Emptymessage); //更新用户信息
  rpc CheckPassWord(PassWordCheckInfo) returns (CheckResponse); //验证密码

}
message PassWordCheckInfo{
  string password=1;
  string encryptedPassword=2;


}

message CheckResponse{
  bool success=1;

}

message PageInfo{
  uint32 Pn = 1;
  uint32 pSize = 2;

}
message MobileRequest{
  string mobile=1;
}
message IdRequest{
  int32 id=1;
}
message CreateUserInfo{
  string nickName=1;
  string passWord=2;
  string mobile=3;

}
message UpdateUserInfo{
  int32 id=1;
  string nickName=2;
  string gender=3;
  uint64 birthDay=4;

}
message UserInfoResponse{
  int32 id=1;
  string passWord=2;
  string mobile=3;
  string nickName=4;
  uint64 birthDay=5;
  string gender=6;
  int32 role=7;
}
message UserListResponse{
  int32 total=1;
  repeated UserInfoResponse data=2;

}